# Acads

./: .gitignore
DL/: activation.py
DL/AS-1/: ME18B156_Assignment_1_DL.ipynb  activations.py  data_utils.py  main.py  nn_utils.py  optimizers.py
DL/AS-2/: ME18B156_Assignment_2_DL.ipynb  main.py  model.py  model_resnet_mod.py  model_scratch.py
DL/AS-3/: ME18B156_Assignment_3.ipynb  README.md  data.py  main.py  model.py  model_att.py  model_no_att.py  predictions_attention.txt  predictions_vanilla.txt
FEA/Sep-16/: CMakeLists.txt  template.cc
FEA/first/: CMakeLists.txt  first  first.cc
FEA/project/: CMakeLists.txt  project.cc  solution-2d.vtk
FinEco/: coeffs.csv  main.py  model.py  requirements.txt  scores.csv  utils.py
FinEco/data/: Asian Paints.csv  Bajaj Auto.csv  Bharti Airtel.csv  Infosys.csv  Kotak Bank.csv  Nestle.csv  Reliance.csv  Sun Pharma.csv  TCS.csv  Tata Steel.csv
IMHT/: bayesian.py  data.csv  mcmc.py  random.csv
LifeSciences/: bipartite.py  network.py  overlap.py
Microprocessor/: diagram.json  libraries.txt  sketch.ino  wokwi-project.txt
PSC/: integral.cpp  integral_reduction.cpp
SigPro/: dft_quiz.py  discrete_fourier_transform.py  dtft.py  endsem_2.py  endsem_3.csv  endsem_3.py  fft.py  fft_quiz.py  fourier.py  fseries.py  ftransform.py  npfourier.py  q1-group4.py  quiz1-1.py  quiz1-2.py  quiz1-2_np.py  quiz3-1.py  quiz3-2.py  quiz4-3,4.py  requirements.txt  sound.py  spfourier.py  sym_fourier.py
TDAA/: greedy.py  layering.py  main.py  plotter.py  ugraph.py
TOV/: exec.py  normal.py  road.py  tmd.py  tmd2.py  tmd4.py
(+80 files in other folders)
